--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 			<version>${springframework.version}</version>
 	</dependency>
 	<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${springframework.version}</version>
+	</dependency>
+	<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.12.6</version>
