--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,8 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
                 <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                	<source>1.7</source>
+                	<target>1.7</target>
                 </configuration>
             </plugin>
       </plugins>
