--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 			<version>1.12.6</version>
 			<scope>provided</scope>
 	</dependency>
+	<dependency>
+    	<groupId>org.aspectj</groupId>
+    	<artifactId>aspectjrt</artifactId>
+    	<version>1.7.3</version>
+	</dependency>
   </dependencies>
   <build>
       <finalName>ROOT</finalName>
