--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,11 @@
           <artifactId>mysql-connector-java</artifactId>
           <version>5.1.31</version>
       </dependency>
+	<dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.6.11</version>
+        </dependency>
   </dependencies>
   <build>
       <finalName>ROOT</finalName>
