--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
       <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
-          <version>3.8.1</version>
+          <version>4.12</version>
           <scope>test</scope>
       </dependency>
   	<dependency>
@@ -195,17 +195,20 @@
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter</artifactId>
+          <version>1.5.4.RELEASE</version>
       </dependency>
 
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-test</artifactId>
+          <version>1.5.4.RELEASE</version>
           <scope>test</scope>
       </dependency>
 
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-web</artifactId>
+          <version>1.5.4.RELEASE</version>
       </dependency>
 
       <dependency>
